# rust-for-data-engineering

delta-kernel/examples/common/: Cargo.toml
delta-kernel/examples/row-tracking-read/: Cargo.toml  README.md
delta-kernel/examples/row-tracking-read/src/: main.rs
delta-kernel/examples/write-table/: Cargo.toml  README.md
delta-kernel/examples/write-table/src/: main.rs
