[package]
name = "row-tracking-read"
version = "0.1.0"
edition = "2024"

[dependencies]
delta_kernel = { git = "https://github.com/delta-io/delta-kernel-rs", branch = "main", version = "0.21.0", features = ["default-engine-rustls", "tokio", "arrow", "prettyprint"] }
futures = "0.3.32"
serde_json = "1.0.149"
tempfile = "3.27.0"
test_utils = { git = "https://github.com/delta-io/delta-kernel-rs", branch = "main", version = "0.21.0" }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.23"
url = "2.5.8"
