[package]
name = "write-table"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
common = { version = "0.1.0", path = "../common", default-features = false }
delta_kernel = { git = "https://github.com/delta-io/delta-kernel-rs.git", version = "0.20.0", features = ["default-engine-rustls", "internal-api", "prettyprint"] }
env_logger = "0.11.8"
itertools = "0.14"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2"
uuid = { version = "1.17.0", features = ["v4"] }

[features]
default = ["arrow"]
arrow = ["arrow-57"]

arrow-57 = ["common/arrow-57"]

[package.metadata.release]
release = false